fixed product-details vertical alignment issue

--- a/app/assets/stylesheets/redesign/product/_product.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product.css.scss
@@ -16,6 +16,11 @@
 
 	.row {
 		padding-top: 1.45rem;
+
+    &:first-child {
+      padding-top: 0;
+    }
+
 	}
 
 	.btn {
@@ -84,15 +89,6 @@
     display: table;
     width: 100%;
     height: 100%;
-		margin-top:100px;
-
-		@media(max-width: 990px){
-			margin-top:80px;
-		}
-
-	  @media(max-width: 768px){
-			margin-top:20px;
-	  }
   }
 
   .product-details-inner {
@@ -293,17 +289,8 @@
 
 .slides-outer-wrapper {
   position: relative;
-  min-height: 600px;
+  min-height: 450px;
   height: auto;
-
-  @media (max-width: 992px) {
-
-    & {
-      min-height: auto;
-    }
-
-  }
-
 }
 
 .vex.vex-theme-flat-attack .vex-content {
@@ -322,7 +309,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
   #slides img.product-image-slide {
     left: -35% !important;
   }
